# RL_HW2

./: README.md
ros2_iiwa/iiwa_bringup/: CMakeLists.txt  package.xml
ros2_iiwa/iiwa_bringup/launch/: aruco_detection.launch.py  iiwa.launch.py  iiwa_aruco_2b_launch.py  iiwa_aruco_2c_launch.py  iiwa_aruco_launch.py
ros2_iiwa/iiwa_bringup/scripts/: aruco_pose_subscriber.py
ros2_iiwa/iiwa_description/env-hooks/: iiwa_description.sh.in
ros2_iiwa/iiwa_description/gazebo/models/aruco_tag/: model.config  model.sdf
ros2_iiwa/iiwa_description/gazebo/worlds/: newGazebo.world
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro  iiwa_camera.xacro
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/action/: LinearTrajectory.action
ros2_kdl_package/config/: action_client_params.yaml  kdl_params.yaml
ros2_kdl_package/include/: kdl_control.h
ros2_kdl_package/install/: local_setup.sh  setup.sh
ros2_kdl_package/install/ros2_kdl_package/share/ros2_kdl_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_kdl_package/launch/: action_client_launch.py  kdl_launch.py  vision_control.launch.py
ros2_kdl_package/scripts/: data_logger.py  robot_data_velocity_ctrl.csv  robot_data_velocity_ctrl_null.csv
ros2_kdl_package/src/: kdl_control.cpp  ros2_kdl_action_client.cpp  ros2_kdl_action_server.cpp  ros2_kdl_node.cpp  ros2_kdl_vision_node.cpp
